--- a/dependencies/maven/artifacts/org/apache/commons/BUILD
+++ b/dependencies/maven/artifacts/org/apache/commons/BUILD
@@ -4,7 +4,7 @@ java_library(
         "//external:jar/org/apache/commons/commons-compress"
     ],
     visibility = [
-        "//dependencies/maven/artifacts:__subpackages__"
+        "//visibility:public"
     ]
 )
 
